prevented layout shift

--- a/src/components/productscard/productscard.scss
+++ b/src/components/productscard/productscard.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   height: 343px;
   align-items: center;
-  position: relative;
+  position: relative; 
 
   img {
     width: 100%;
@@ -35,6 +35,7 @@
   }
 
   .footer {
+    
     width: 100%;
     height: 5%;
     display: flex;
@@ -52,9 +53,12 @@
     }
   }
 }
- .rating{
-  margin-top: 18px;
-  margin-right: auto;
-  font-size: 16px;
-  top: 380px;
+ .rating{ 
+  font-size: 16px; 
+ }
+
+ .themaincontainer{
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
  }
